# AlfQ

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  .golangci.yml  AGENT.md  CODEOWNERS  Makefile
.github/: PULL_REQUEST_TEMPLATE.md
backend/: README.md
configs/: README.md  admin-api.yaml  assistant-svc.yaml  factor-svc.yaml  md-gateway.yaml  oms.yaml  quant-engine.yaml  risk-svc.yaml  strategy-svc.yaml  trading-core.yaml
deploy/: .env.example  Dockerfile.backtest-runner  README.md  docker-compose.prod.yml  docker-compose.yml
research/: README.md  pyproject.toml  ruff.toml
research/alfq_research/: __init__.py  _version.py
research/alfq_research/backtest/: __init__.py  broker_sim.py  consistency.py  event.py  metrics.py  runner.py  vectorized.py
research/alfq_research/cli/: __main__.py
research/alfq_research/client/: __init__.py  auth.py  connect_client.py  market_data_view.py
research/alfq_research/data/: client.py  market_data_view.py  pg.py
research/alfq_research/factor/: __init__.py
research/alfq_research/factor/dsl/: ast_.py  compile.py  lexer.py  ops.py  parser.py
research/alfq_research/model/: __init__.py  exporter.py  trainer.py
research/alfq_research/spec/: __init__.py  strategy_spec.py
research/tests/: test_backtest.py  test_backtest_event.py  test_consistency.py  test_dsl_parity.py  test_integration_real.py  test_model_trainer.py  test_onnx_roundtrip.py  test_rs01_parity.py  test_smoke.py
research/tests/eval_datasets/: assistant_eval.json
research/tests/fixtures/: go_golden_values.json  golden_bars.json
(+442 files in other folders)
